test/files/neg/macro-argtype-mismatch.check
Test_2.scala:3: error: type mismatch;
 found   : String("2")
 required: Int
  foo("2")
      ^
one error found
